[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/VisualNovel/VisualNovel.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/tall-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/table.png" type="Texture" id=3]
[ext_resource path="res://assets/actors/necromancer/necromancer-default00.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/vn/fullenglish.png" type="Texture" id=5]
[ext_resource path="res://scenes/DialogBox/DialogBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/palatino_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/palatino.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/NecRomEdit/JsonParser.gd" type="Script" id=9]
[ext_resource path="res://scenes/SoundManager/SoundManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ChoicesBox/ChoicesBox.tscn" type="PackedScene" id=11]

[node name="VisualNovel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Stage" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 848.0
texture = ExtResource( 2 )

[node name="Table" type="TextureRect" parent="Stage"]
margin_left = -40.0
margin_top = -8.0
margin_right = 552.0
margin_bottom = 616.0
texture = ExtResource( 3 )

[node name="necromancer-default00" type="Sprite" parent="."]
visible = false
position = Vector2( 359, 151 )
texture = ExtResource( 4 )

[node name="FullEnglish" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 240.0
margin_bottom = -40.0
texture = ExtResource( 5 )
stretch_mode = 3

[node name="DialogBox" parent="FullEnglish" instance=ExtResource( 6 )]
margin_left = 64.0
margin_top = 40.0
margin_right = -64.0
margin_bottom = -40.0

[node name="RichTextLabel" type="RichTextLabel" parent="FullEnglish"]
visible = false
margin_left = 64.0
margin_top = 40.0
margin_right = 448.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
custom_colors/default_color = Color( 0.109804, 0.109804, 0.109804, 1 )
bbcode_enabled = true
bbcode_text = "[b]Isabella, the Master Blacksmith[/b] interrupts,
\"Now ain’t you both just quite the same piece o’pie, bickerin’ like that... I swear I’ve never seen nor 'eard m'Lydia blabber’n’ that much!\"
\""
text = "Isabella, the Master Blacksmith interrupts,
\"Now ain’t you both just quite the same piece o’pie, bickerin’ like that... I swear I’ve never seen nor 'eard m'Lydia blabber’n’ that much!\"
\""
scroll_active = false

[node name="Timer" type="Timer" parent="FullEnglish"]
wait_time = 0.01

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true

[node name="JsonParser" type="Node" parent="."]
script = ExtResource( 9 )

[node name="SoundManager" parent="." instance=ExtResource( 10 )]

[node name="ChoicesBox" parent="." instance=ExtResource( 11 )]
visible = false
